# serverust

./: .dockerignore  .env.example  .env.postgres.example  .env.sqlite.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DATABASE.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  README.md  docker-compose.test.yml  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  QUICK_REFERENCE.md  WORKFLOWS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-checks.yml
migrations/: 20250819195936_create_users.sql
migrations-sqlite/: 20250819195936_create_users.sql
src/: config.rs  lib.rs  main.rs  server.rs
src/adapters/: mod.rs
src/adapters/crypto/: argon2.rs
src/adapters/http/: app_error_impl.rs  app_state.rs  mod.rs
src/adapters/http/routes/: mod.rs  user.rs
src/adapters/persistence/: mod.rs  user.rs
src/application/: app_error.rs  mod.rs  user_service.rs
src/application/use_cases/: user.rs
src/crypto/: mod.rs  password.rs
src/domain/: user.rs
src/domain/entities/: user.rs
src/infra/: app.rs  config.rs  db.rs  mod.rs  setup.rs
src/persistence/: mod.rs  user_repo.rs
src/persistence/postgres/: mod.rs  user.rs
src/persistence/sqlite/: mod.rs  user.rs
src/web/: app_state.rs  error_response.rs  mod.rs  user_routes.rs
tests/: user_repo.rs
tests/common/: mod.rs
